[gd_scene load_steps=30 format=2]

[ext_resource path="res://Utils/UnitSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://Building/Building.gd" type="Script" id=2]
[ext_resource path="res://Assets/Level/Building/RedBuilding.png" type="Texture" id=3]
[ext_resource path="res://Assets/Level/Building/BlueBuilding.png" type="Texture" id=4]
[ext_resource path="res://Character/BT/Leaves/Idle.gd" type="Script" id=5]
[ext_resource path="res://HealthBar/HealthBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://BT/BehaviorTree.gd" type="Script" id=7]
[ext_resource path="res://Utils/Attributes/Attributes.tscn" type="PackedScene" id=8]
[ext_resource path="res://Character/BT/Leaves/FindClosestEnemy.gd" type="Script" id=9]
[ext_resource path="res://BT/BTSelector.gd" type="Script" id=10]
[ext_resource path="res://BT/BTSequential.gd" type="Script" id=11]
[ext_resource path="res://Character/BT/Leaves/TriggerAnimation.gd" type="Script" id=12]
[ext_resource path="res://Character/Skills/SkillHandler.gd" type="Script" id=13]
[ext_resource path="res://Character/Skills/Shared/BasicRangedAttack.gd" type="Script" id=14]
[ext_resource path="res://Utils/HitArea.tscn" type="PackedScene" id=15]
[ext_resource path="res://Utils/UnitDetector.tscn" type="PackedScene" id=16]
[ext_resource path="res://Utils/Attributes/Scripts/Res/Primary/AttrResPrimary.gd" type="Script" id=17]
[ext_resource path="res://Utils/Attributes/Scripts/Res/Radius/AttrResRadius.gd" type="Script" id=18]
[ext_resource path="res://Utils/Attributes/Scripts/Res/Stats/AttrResStats.gd" type="Script" id=19]
[ext_resource path="res://Character/Child/Creep/RangeCreep/Weapon/Arrow.tscn" type="PackedScene" id=20]
[ext_resource path="res://Assets/Effects/target.png" type="Texture" id=21]
[ext_resource path="res://BT/BTSelectorRandom.gd" type="Script" id=22]
[ext_resource path="res://Assets/Character/Creep/RangeCreep/Weapon/Arrow.png" type="Texture" id=23]

[sub_resource type="Resource" id=3]
resource_local_to_scene = true
script = ExtResource( 17 )
unit_team = 0
unit_type = 3
mirror_mode = false

[sub_resource type="Resource" id=4]
resource_local_to_scene = true
script = ExtResource( 19 )
health = 0.0
max_health = 0.0
health_regeneration_rate = 0.0
health_regeneration_step = 0.0
mana = 0.0
max_mana = 0.0
mana_regeneration_rate = 0.0
mana_regeneration_step = 0.0
move_speed = 0.0
move_acceleration = 0.0
attack_speed = 0.0
damage = 0.0

[sub_resource type="Resource" id=5]
resource_local_to_scene = true
script = ExtResource( 18 )
collision_size = 0.0
attack_range = 0.0
unit_detection = 0.0
area_selection = 0.0
hurt_area = {
"height": 0.0,
"radius": 0.0
}

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ null, null ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 15.0

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true

[node name="Building" type="StaticBody2D" groups=["units"]]
collision_layer = 768
collision_mask = 0
script = ExtResource( 2 )
blue_team_texture = ExtResource( 4 )
red_team_texture = ExtResource( 3 )

[node name="Attributes" parent="." instance=ExtResource( 8 )]
primary = SubResource( 3 )
stats = SubResource( 4 )
radius = SubResource( 5 )

[node name="Skills" type="Node" parent="."]
script = ExtResource( 13 )

[node name="Bow" type="Node" parent="Skills"]
script = ExtResource( 14 )
speed = 500.0
projectile_scene = ExtResource( 20 )
spawn_position_node = NodePath("../../TextureContainer/Position2D/Weapon/ArrowInitPosition")

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 7 )
agent = NodePath("..")

[node name="BTSelector" type="Node" parent="BehaviorTree"]
script = ExtResource( 10 )

[node name="AttackCloseEnemy" type="Node" parent="BehaviorTree/BTSelector"]
script = ExtResource( 11 )

[node name="UpdateTargetedEnemy" type="Node" parent="BehaviorTree/BTSelector/AttackCloseEnemy"]
script = ExtResource( 9 )

[node name="BTSelectorRandom" type="Node" parent="BehaviorTree/BTSelector/AttackCloseEnemy"]
script = ExtResource( 22 )

[node name="Attack" type="Node" parent="BehaviorTree/BTSelector/AttackCloseEnemy/BTSelectorRandom"]
script = ExtResource( 12 )
animation = "Attack"

[node name="Idle" type="Node" parent="BehaviorTree/BTSelector"]
script = ExtResource( 5 )

[node name="HUD" type="Position2D" parent="."]
z_index = 10
z_as_relative = false

[node name="HealthBar" parent="HUD" instance=ExtResource( 6 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Selection" type="Line2D" parent="HUD"]
visible = false
position = Vector2( -11.0526, -9 )
scale = Vector2( 2.21052, 3 )
z_index = -1
z_as_relative = false
points = PoolVector2Array( 0, 2, 0, 0, 3, 0, 3, -1, 7, -1, 7, 0, 10, 0, 10, 2, 14, 2, 14, 4, 10, 4, 10, 6, 7, 6, 7, 7, 3, 7, 3, 6, 0, 6, 0, 4, -4, 4, -4, 2, 0, 2 )
width = 1.0
default_color = Color( 0.00784314, 0.678431, 0.0666667, 1 )

[node name="Polygon2D" type="Polygon2D" parent="HUD/Selection"]
z_index = -1
z_as_relative = false
color = Color( 0, 1, 0, 0.235294 )
polygon = PoolVector2Array( 0, 0, 3, 0, 3, -1, 7, -1, 7, 0, 10, 0, 10, 2, 14, 2, 14, 4, 10, 4, 10, 6, 7, 6, 7, 7, 3, 7, 3, 6, 0, 6, 0, 4, -4, 4, -4, 2, 0, 2 )

[node name="TextureContainer" type="Position2D" parent="."]

[node name="Position2D" type="Position2D" parent="TextureContainer"]
position = Vector2( 0, -11 )

[node name="Weapon" type="AnimatedSprite" parent="TextureContainer/Position2D"]
visible = false
position = Vector2( 6, -11 )
frames = SubResource( 49 )

[node name="Arrow" type="Sprite" parent="TextureContainer/Position2D/Weapon"]
position = Vector2( 1.00386, 1.89644 )
texture = ExtResource( 23 )

[node name="ArrowInitPosition" type="Position2D" parent="TextureContainer/Position2D/Weapon"]
visible = false
position = Vector2( -6.21627, 0.305538 )

[node name="Sprite" type="Sprite" parent="TextureContainer"]

[node name="BehaviorAnimPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="UnitSelector" parent="." instance=ExtResource( 1 )]
visible = false

[node name="CollisionShape2D" parent="UnitSelector" index="0"]
shape = SubResource( 2 )

[node name="UnitDetector" parent="." instance=ExtResource( 16 )]
visible = false

[node name="HitArea" parent="." instance=ExtResource( 15 )]
visible = false

[node name="AimPoint" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
z_index = 1
texture = ExtResource( 21 )

[connection signal="animation_started" from="BehaviorAnimPlayer" to="." method="_on_BehaviorAnimPlayer_animation_started"]

[editable path="UnitSelector"]
